--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: Information Analysis
 
@@ -32,7 +33,7 @@ python_requires = >= 3.7
 install_requires =
     lxml >= 3.6
     pandas >= 1.0
-    pydantic >= 1.1
+    pydantic >= 1.7
     python-dateutil
     requests >= 2.7
     setuptools >= 41
