--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ setup_requires =
 cache =
     requests-cache
 docs =
-    sphinx >= 4
+    sphinx >=4,<6
     sphinx-book-theme
     IPython
 tests =
