Use zip_safe=False in setup.cfg for mypy

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ classifiers =
 
 [options]
 packages = find:
-zip_safe = True
+zip_safe = False
 include_package_data = True
 python_requires = >= 3.7.2
 install_requires =
