--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -90,7 +90,7 @@ jobs:
       with:
         python-version: 3.x
         cache: pip
-        cache-dependency-path: "**/setup.cfg"
+        cache-dependency-path: "**/pyproject.toml"
 
     - name: Upgrade pip, wheel
       run: python -m pip install --upgrade pip wheel
