Drop support for Python 3.7

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -22,7 +22,7 @@ jobs:
         - ubuntu-latest
         - windows-latest
         python-version:
-        - "3.7"  # Earliest supported version; actually 3.7.2
+        - "3.8"  # Earliest supported version
         - "3.9"
         - "3.10"
         - "3.11"  # Latest supported version
