--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,11 +1,11 @@
 version: 2
 
+build:
+  os: ubuntu-22.04
+  python: "3"
+
 python:
-  version: "3"
   install:
   - method: pip
     path: .
-    extra_requirements:
-    - cache
-    - docs
-    - tests
+    extra_requirements: [cache,docs,tests]
