Remove pytest-xdist from "services" CI job
This causes the report output to only show half the supported services.
The reporting code must be updated to handle xdist usage before this
can be used in the workflow.

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -105,8 +105,7 @@ jobs:
       run: |
         pytest -m "network" \
           -ra --color=yes --verbose \
-          --cov-report=xml \
-          --numprocesses auto
+          --cov-report=xml
       shell: bash
 
     - name: Upload test coverage to Codecov.io
