Expand codecov.yml configuration

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,3 +1,11 @@
+codecov:
+  notify:
+    after_n_builds: 5
+
+comment:
+  # Don't display the large graph
+  layout: "diff, files"
+
 coverage:
   status:
     project:
