--- a/.github/workflows/sources.yaml
+++ b/.github/workflows/sources.yaml
@@ -53,6 +53,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    # TODO avoid requiring this; it's not used in this workflow
+    - name: Checkout test data
+      uses: actions/checkout@v3
+      with:
+        repository: khaeru/sdmx-test-data
+        path: sdmx-test-data
+
     - uses: actions/setup-python@v4
       with:
         python-version: 3.x
