Re-enable all resource tests for sources workflow

--- a/.github/workflows/sources.yaml
+++ b/.github/workflows/sources.yaml
@@ -74,7 +74,7 @@ jobs:
       env:
         SDMX_TEST_DATA: ./sdmx-test-data/
       run: |
-        pytest -m "network" -k "Test${{ matrix.source }} and dataflow" \
+        pytest -m "network" -k Test${{ matrix.source }} \
           -ra --color=yes --verbose \
           --cov-report=xml
 
