--- a/.github/workflows/sources.yaml
+++ b/.github/workflows/sources.yaml
@@ -3,8 +3,9 @@ name: Test data sources
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # Uncomment to test changes on a PR branch
+  # pull_request:
+  #   branches: [ main ]
   schedule:  # 05:00 UTC = 06:00 CET = 07:00 CEST
   - cron: "0 5 * * *"
 
