--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -71,3 +71,13 @@ jobs:
     - name: Test documentation build using Sphinx
       if: contains(matrix.os, 'ubuntu')
       run: make --directory=doc html
+
+  pre-commit:
+    name: Code quality
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+    - uses: pre-commit/action@v3.0.0
