Convert flake8, isort config to ruff config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
     - pandas-stubs
     - pytest
     - requests-cache
+    - requests-mock
     - types-Jinja2
     - types-lxml
     - types-python-dateutil
