--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.4.1
+  rev: v1.6.1
   hooks:
   - id: mypy
     additional_dependencies:
@@ -14,11 +14,9 @@ repos:
     - types-PyYAML
     - types-requests
     args: []
-- repo: https://github.com/psf/black
-  rev: 23.7.0
-  hooks:
-  - id: black
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.0.287
+  rev: v0.1.2
   hooks:
   - id: ruff
+  - id: ruff-format
+    args: [ --check ]
