--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -54,7 +54,7 @@ jobs:
       run: python -m pip install --upgrade pip wheel
 
     - name: Install the Python package and dependencies
-      run: pip install .[cache,docs,tests]
+      run: pip install .[cache,tests]
 
     - name: Run pytest
       env:
@@ -68,10 +68,6 @@ jobs:
 
     - name: Upload test coverage to Codecov.io
       uses: codecov/codecov-action@v3
-
-    - name: Test documentation build using Sphinx
-      if: contains(matrix.os, 'ubuntu')
-      run: make --directory=doc html
 
   pre-commit:
     name: Code quality
