--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,8 @@ omit = [
 exclude_also = [
   # Don't complain about abstract methods, they aren't run
   "@(abc\\.)?abstractmethod",
+  # Imports only used by type checkers
+  "if TYPE_CHECKING:",
 ]
 
 [tool.mypy]
