--- a/.github/workflows/sources.yaml
+++ b/.github/workflows/sources.yaml
@@ -68,7 +68,7 @@ jobs:
         cache-dependency-path: "**/pyproject.toml"
 
     - name: Install the Python package and dependencies
-      run: pip install .[cache,tests,validation]
+      run: pip install .[cache,tests]
 
     - name: Tests of ${{ matrix.source }} data source
       continue-on-error: true
@@ -104,7 +104,7 @@ jobs:
         cache-dependency-path: "**/pyproject.toml"
 
     - name: Install the Python package and dependencies
-      run: pip install .[cache,tests,validation]
+      run: pip install .[cache,tests]
 
     - name: Download artifacts
       uses: actions/download-artifact@v3
