--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ requires-python = ">=3.8"
 dependencies = [
   "lxml >= 3.6",
   "pandas >= 1.0",
-  "platformdirs",
+  "platformdirs >= 4.1",
   "python-dateutil",
   "requests >= 2.7",
   "typing_extensions",
