--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -50,11 +50,11 @@ jobs:
         cache: pip
         cache-dependency-path: "**/pyproject.toml"
 
-    - name: Upgrade pip, wheel
-      run: python -m pip install --upgrade pip wheel
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
 
     - name: Install the Python package and dependencies
-      run: pip install .[cache,tests]
+      run: pip install .[tests]
 
     - name: Run pytest
       env:
