--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -67,7 +67,8 @@ jobs:
       shell: bash
 
     - name: Upload test coverage to Codecov.io
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
+      env: { CODECOV_TOKEN: "${{ secrets.CODECOV_TOKEN }}" }
 
   pre-commit:
     name: Code quality
