--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,14 +91,15 @@ markers = [
   "source: slower, network tests of individual SDMX web services",
 ]
 
-[tool.ruff]
+[tool.ruff.lint]
 select = ["C9", "E", "F", "I", "W"]
 ignore = ["E501", "W191"]
-
-[tool.ruff.mccabe]
 # Exceptions:
+# - .client._handle_get_kwargs: 12
+# - .reader.xml.v21.read_message: 12
 # - .writer.pandas._maybe_convert_datetime: 27
-max-complexity = 12
+# - .writer.pandas.write_dataset: 12
+mccabe.max-complexity = 11
 
 [tool.setuptools.packages]
 find = {}
