--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -68,7 +68,7 @@ jobs:
 
     - name: Upload test coverage to Codecov.io
       uses: codecov/codecov-action@v4
-      env: { CODECOV_TOKEN: "${{ secrets.CODECOV_TOKEN }}" }
+      with: { token: "${{ secrets.CODECOV_TOKEN }}" }
 
   pre-commit:
     name: Code quality
