--- a/.github/workflows/sources.yaml
+++ b/.github/workflows/sources.yaml
@@ -86,8 +86,9 @@ jobs:
     - name: Upload ${{ matrix.source }} results as a build artifact
       uses: actions/upload-artifact@v4
       with:
-        name: source-tests
+        name: source-tests-${{ matrix.source }}
         path: source-tests/*.json
+        compression-level: 1
 
     - name: Upload test coverage to Codecov.io
       uses: codecov/codecov-action@v4
@@ -113,8 +114,9 @@ jobs:
     - name: Download artifacts
       uses: actions/download-artifact@v4
       with:
-        name: source-tests
         path: source-tests
+        pattern: source-tests-*
+        merge-multiple: true
 
     - name: Compile report
       run: python -m sdmx.testing.report
