Add pytest-xdist support to .testing.report

--- a/.github/workflows/sources.yaml
+++ b/.github/workflows/sources.yaml
@@ -76,12 +76,11 @@ jobs:
       continue-on-error: true
       env:
         SDMX_TEST_DATA: ./sdmx-test-data/
-      # NB Cannot use --numprocesses=auto (pytest-xdist) here, as
-      #    it interferes with collating results
       run: |
-        pytest -m "network" -k Test${{ matrix.source }} \
+        pytest -m network -k Test${{ matrix.source }} \
           --color=yes --durations=30 -rA --verbose \
-          --cov-report=xml
+          --cov-report=xml \
+          --numprocesses=auto
 
     - name: Upload ${{ matrix.source }} results as a build artifact
       uses: actions/upload-artifact@v4
@@ -123,8 +122,7 @@ jobs:
 
     - name: Upload report as a pages artifact
       uses: actions/upload-pages-artifact@v3
-      with:
-        path: source-tests
+      with: { path: source-tests }
 
   # This job is as described at https://github.com/actions/deploy-pages
   deploy:
