--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,12 @@ repos:
   hooks:
   - id: mypy
     additional_dependencies:
+    - lxml-stubs
     - pandas-stubs
     - pytest
     - requests-cache
     - requests-mock
     - types-Jinja2
-    - types-lxml
     - types-python-dateutil
     - types-PyYAML
     - types-requests
