--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -30,6 +30,14 @@ jobs:
         # commented: only enable once next Python version enters RC
         # - "3.13.0-rc.1"  # Development version
 
+        # Work around https://github.com/actions/setup-python/issues/696
+        exclude:
+        - {os: macos-latest, python-version: "3.8"}
+        - {os: macos-latest, python-version: "3.9"}
+        include:
+        - {os: macos-13, python-version: "3.8"}
+        - {os: macos-13, python-version: "3.9"}
+
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
