--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,10 +95,11 @@ select = ["C9", "E", "F", "I", "W"]
 ignore = ["E501", "W191"]
 # Exceptions:
 # - .client._handle_get_kwargs: 12
-# - .reader.xml.v21.read_message: 15
+# - .reader.xml.v21._component_end: 12
+# - .testing.generate_endpoint_tests: 11
 # - .writer.pandas._maybe_convert_datetime: 23
 # - .writer.pandas.write_dataset: 12
-mccabe.max-complexity = 11
+mccabe.max-complexity = 10
 
 [tool.setuptools.packages]
 find = {}
