--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ select = ["C9", "E", "F", "I", "W"]
 ignore = ["E501", "W191"]
 # Exceptions:
 # - .client._handle_get_kwargs: 12
+# - .reader.csv.Reader.inspect_header: 12
 # - .reader.xml.v21._component_end: 12
 # - .testing.generate_endpoint_tests: 11
 # - .writer.pandas._maybe_convert_datetime: 23
