--- a/.github/workflows/sources.yaml
+++ b/.github/workflows/sources.yaml
@@ -14,6 +14,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
+env:
+  python-version: 3.13
+
 jobs:
   source:
     runs-on: ubuntu-latest
@@ -70,7 +73,7 @@ jobs:
 
     - name: Install Python, the package, and dependencies
       run: |
-        uv venv --python=${{ matrix.python-version }}
+        uv venv --python=${{ env.python-version }}
         uv pip install .[tests] pytest-regex
 
     - name: Tests of ${{ matrix.source }} data source
@@ -110,7 +113,7 @@ jobs:
 
     - name: Install Python, the package, and dependencies
       run: |
-        uv venv --python=${{ matrix.python-version }}
+        uv venv --python=${{ env.python-version }}
         uv pip install .[tests] pytest-regex
 
     - name: Download artifacts
