Replace requests_mock with responses in tests

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     - pandas-stubs
     - pytest
     - requests-cache
-    - requests-mock
+    - responses
     - types-Jinja2
     - types-python-dateutil
     - types-PyYAML
