Add --sdmx-fetch-data; use in GHA workflow

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -51,6 +51,7 @@ jobs:
         uv run --no-sync \
           pytest \
           -ra --color=yes --verbose \
+          --sdmx-fetch-data \
           --cov-report=xml \
           --numprocesses auto
       shell: bash
