Use session-wide common dir for schemas fixture
Avoid creating separate copies of the schemas per xdist worker, and
resulting failures on GHA Windows runners.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
 cache = ["requests-cache"]
 docs = ["furo", "IPython", "sphinx >= 8"]
 tests = [
+  "filelock",
   "GitPython",
   "Jinja2",
   "pytest >= 5",
