--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
   "lxml >= 3.6",
+  "packaging >= 26",
   "pandas >= 1.0",
   "platformdirs >= 4.1",
   "python-dateutil",
