--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -45,7 +45,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install the package and dependencies
-      run: uv pip install .[tests]
+      # TEMPORARY Work around https://github.com/khaeru/sdmx/issues/273
+      run: uv pip install "requests-cache < 1.3" .[tests]
 
     - name: Run pytest
       run: |
